--- a/GestorBaseDatos/GestorBaseDatos.csproj
+++ b/GestorBaseDatos/GestorBaseDatos.csproj
@@ -71,6 +71,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="verVista.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="verVista.Designer.cs">
+      <DependentUpon>verVista.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="BorrarTabla.resx">
       <DependentUpon>BorrarTabla.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="verVista.resx">
+      <DependentUpon>verVista.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
